# lectureflow

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
config/: __init__.py  logging_config.yaml  model_config.yaml  prompts.yaml
docs/: api.md  setup.md
public/: app.js  index.html  styles.css
src/: __init__.py
src/api/: app.py
src/core/: agent.py  annotator.py  pipeline.py  postprocessor.py  segmenter.py  transcript.py
src/db/: models.py  repository.py
src/export/: formatters.py
src/handlers/: __init__.py  error_handler.py
src/llm/: anthropic_client.py  base.py  factory.py  grok_client.py  groq_client.py  ollama_client.py  openai_client.py
src/utils/: cache.py  logger.py  rate_limiter.py  token_counter.py
tests/: conftest.py  test_cache.py  test_db.py  test_error_handler.py  test_formatters.py  test_llm.py  test_pipeline.py  test_postprocessor.py  test_rate_limiter.py  test_transcript.py
